--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "prismjs": "^1.20.0",
     "vue": "^3.0.0-beta.14",
     "vue-router": "^4.0.0-alpha.12"
   },
@@ -13,6 +14,7 @@
     "@vue/compiler-sfc": "^3.0.0-beta.14",
     "koa-router": "^9.0.1",
     "less": "^3.11.3",
-    "vite": "^0.20.0"
+    "markdown-it": "^11.0.0",
+    "vite": "^0.20.8"
   }
 }
