--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-test",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "node ./bin/main.js",
     "build": "vite build"
   },
   "dependencies": {
