--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-test",
+  "name": "vc2",
   "version": "0.0.0",
   "scripts": {
     "dev": "node ./bin/main.js",
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-beta.15",
+    "cypress": "^4.9.0",
     "koa-router": "^9.0.1",
     "less": "^3.11.3",
     "markdown-it": "^11.0.0",
