--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "node ./bin/main.js",
-    "build": "vite build"
+    "build": "vite build",
+    "e2e": "./node_modules/.bin/cypress open"
   },
   "dependencies": {
     "prismjs": "^1.20.0",
