--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vc2",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha.1",
   "scripts": {
     "dev": "node ./bin/main.js",
     "build": "vite build",
