--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "vc2",
-  "version": "0.0.0-alpha.1",
+  "version": "0.0.0-alpha.2",
   "scripts": {
     "dev": "node ./bin/main.js",
-    "build": "vite build",
     "e2e": "./node_modules/.bin/cypress open"
   },
+  "module": "./packages/index.js",
+  "style": "./packages/layout.less",
+  "author": "WenLong",
   "dependencies": {
     "prismjs": "^1.20.0",
     "vue": "^3.0.0-beta.15",
@@ -18,5 +20,6 @@
     "less": "^3.11.3",
     "markdown-it": "^11.0.0",
     "vite": "^1.0.0-beta.8"
-  }
+  },
+  "license": "MIT"
 }
