--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "vc2",
-  "version": "0.0.0-alpha.2",
+  "version": "0.0.0-alpha.4",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "node ./bin/main.js",
+    "build": "node ./bin/build.js",
     "e2e": "./node_modules/.bin/cypress open"
   },
-  "module": "./packages/index.js",
-  "style": "./packages/layout.less",
+  "module": "./dist/index.js",
+  "style": "./dist/layout.css",
   "author": "WenLong",
   "dependencies": {
     "prismjs": "^1.20.0",
