--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "style": "./dist/layout.css",
   "author": "WenLong",
   "dependencies": {
+    "async-validator": "^3.3.0",
     "prismjs": "^1.20.0",
     "vue": "^3.0.0-beta.18",
     "vue-router": "^4.0.0-alpha.12"
