--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "node ./bin/main.js",
     "build": "node ./bin/build.js",
+    "update": "node ./bin/update.js",
     "e2e": "./node_modules/.bin/cypress open"
   },
   "module": "./dist/index.js",
