--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "async-validator": "^3.3.0",
     "prismjs": "^1.20.0",
-    "vue": "^3.0.0-beta.20",
-    "vue-router": "^4.0.0-alpha.12"
+    "vue": "^3.0.0-beta.20"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-beta.20",
