--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "style": "./dist/layout.css",
   "author": "WenLong",
   "dependencies": {
+    "@popperjs/core": "^2.4.4",
     "async-validator": "^3.3.0",
     "prismjs": "^1.20.0",
     "vue": "^3.0.0-beta.20"
