--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "@popperjs/core": "^2.4.4",
     "async-validator": "^3.3.0",
     "prismjs": "^1.20.0",
-    "vue": "^3.0.0-beta.24"
+    "vue": "^3.0.0-rc.2"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-beta.24",
+    "@vue/compiler-sfc": "^3.0.0-rc.2",
     "cypress": "^4.9.0",
     "koa-router": "^9.0.1",
     "less": "^3.11.3",
     "markdown-it": "^11.0.0",
-    "vite": "^1.0.0-beta.11"
+    "vite": "^1.0.0-rc.1"
   },
   "license": "MIT"
 }
