--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koa-router": "^9.0.1",
     "less": "^3.11.3",
     "markdown-it": "^11.0.0",
+    "trash": "^6.1.1",
     "vite": "^1.0.0-rc.3"
   },
   "license": "MIT"
