--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   "style": "./dist/layout.css",
   "author": "WenLong",
   "dependencies": {
+    "@koa/router": "^9.4.0",
     "@popperjs/core": "^2.4.4",
     "async-validator": "^3.3.0",
     "prismjs": "^1.20.0",
     "resize-observer-polyfill": "^1.5.1",
-    "vue": "^3.0.0-rc.7"
+    "vue": "^3.0.0-rc.9"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.7",
+    "@vue/compiler-sfc": "^3.0.0-rc.9",
     "cypress": "^4.9.0",
     "inquirer": "^7.3.3",
-    "koa-router": "^9.0.1",
     "less": "^3.11.3",
     "markdown-it": "^11.0.0",
     "trash": "^6.1.1",
