--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vc2",
-  "version": "0.0.0-alpha.15",
+  "version": "1.0.0",
   "files": [
     "dist"
   ],
@@ -28,6 +28,7 @@
     "inquirer": "^7.3.3",
     "less": "^3.12.2",
     "markdown-it": "^11.0.0",
+    "markdown-it-for-inline": "^0.1.1",
     "trash": "^6.1.1",
     "vite": "^1.0.0-rc.4"
   },
