--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.11",
+    "chalk": "^4.1.0",
     "cypress": "^4.9.0",
     "inquirer": "^7.3.3",
     "less": "^3.12.2",
