--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "async-validator": "^3.4.0",
     "prismjs": "^1.21.0",
     "resize-observer-polyfill": "^1.5.1",
-    "vue": "^3.0.0-rc.11"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.11",
+    "@vue/compiler-sfc": "^3.0.0",
     "chalk": "^4.1.0",
     "cypress": "^4.9.0",
     "inquirer": "^7.3.3",
