--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vc2",
-  "version": "1.2.2",
+  "version": "1.2.2-beta.1",
   "files": [
     "dist"
   ],
@@ -13,6 +13,7 @@
   },
   "module": "./dist/index.js",
   "style": "./dist/layout.css",
+  "typings": "types/index.d.ts",
   "author": "WenLong",
   "dependencies": {
     "@koa/router": "^9.4.0",
