--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "vc2",
   "version": "1.2.2-beta.1",
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "scripts": {
     "dev": "node ./bin/main.js",
