--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
-    "@koa/router": "^9.4.0",
+    "@types/express": "^4.17.11",
+    "@types/prismjs": "^1.16.2",
+    "@vitejs/plugin-vue": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vuedx/typecheck": "^0.6.0",
     "chalk": "^4.1.0",
+    "express": "^4.17.1",
     "inquirer": "^7.3.3",
     "less": "^3.12.2",
     "markdown-it": "^11.0.1",
     "markdown-it-for-inline": "^0.1.1",
     "trash": "^6.1.1",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^2.0.0-beta.31"
   },
   "license": "MIT"
 }
