--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-vue": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "express": "^4.17.1",
     "inquirer": "^7.3.3",
