--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "markdown-it": "^11.0.1",
     "markdown-it-for-inline": "^0.1.1",
     "trash": "^6.1.1",
-    "vite": "^2.0.0-beta.31"
+    "vite": "^2.0.5"
   },
   "license": "MIT"
 }
