--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "types"
   ],
   "scripts": {
+    "serve": "vipress -p 3000",
     "dev": "node ./bin/main.js",
     "build": "node ./bin/build.js",
     "update": "node --experimental-json-modules ./bin/update.mjs",
@@ -21,12 +22,14 @@
     "async-validator": "^3.4.0",
     "prismjs": "^1.21.0",
     "resize-observer-polyfill": "^1.5.1",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.10"
   },
   "devDependencies": {
+    "@intsig/vipress": "^0.9.0",
     "@types/express": "^4.17.11",
     "@types/prismjs": "^1.16.2",
-    "@vitejs/plugin-vue": "^1.0.6",
+    "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
     "body-parser": "^1.19.0",
@@ -35,8 +38,7 @@
     "less": "^3.12.2",
     "markdown-it": "^11.0.1",
     "markdown-it-for-inline": "^0.1.1",
-    "trash": "^6.1.1",
-    "vite": "^2.0.5"
+    "trash": "^6.1.1"
   },
   "license": "MIT"
 }
