--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "async-validator": "^3.4.0",
     "prismjs": "^1.21.0",
     "resize-observer-polyfill": "^1.5.1",
-    "vue": "^3.0.5",
+    "vue": "^3.1.5",
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
-    "@intsig/vipress": "^0.9.0",
+    "@intsig/vipress": "^0.11.0-rc.3",
     "@types/express": "^4.17.11",
     "@types/prismjs": "^1.16.2",
-    "@vitejs/plugin-vue": "^1.2.5",
-    "@vue/compiler-sfc": "^3.0.5",
-    "@vuedx/typecheck": "^0.6.0",
+    "@vitejs/plugin-vue": "^1.4.0",
+    "@vue/compiler-sfc": "^3.1.5",
+    "@vuedx/typecheck": "^0.6.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "inquirer": "^7.3.3",
-    "less": "^3.12.2",
+    "less": "^3.13.1",
     "markdown-it": "^11.0.1",
     "markdown-it-for-inline": "^0.1.1",
     "trash": "^6.1.1"
