chore: update NPM

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-# registry=https://registry.npm.taobao.org/
-registry=http://localhost:4873/
+registry=http://npm.qixin007.com/
+# registry=http://localhost:4873/
