--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vc2",
-  "version": "1.10.8",
+  "version": "0.0.0-rc.1",
   "files": [
     "lib",
     "types"
@@ -21,7 +21,6 @@
   "dependencies": {
     "@popperjs/core": "^2.11.0",
     "async-validator": "^3.4.0",
-    "prismjs": "^1.21.0",
     "resize-observer-polyfill": "^1.5.1",
     "vue": "^3.2.22",
     "vue-router": "^4.0.10"
