--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "typings": "types/index.d.ts",
   "author": "WenLong",
   "dependencies": {
-    "@popperjs/core": "^2.11.0",
+    "@floating-ui/dom": "^0.4.2",
     "async-validator": "^4.0.7",
     "resize-observer-polyfill": "^1.5.1",
     "vue": "^3.2.22",
