--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
-    "@ektx/vipress": "^0.14.2",
-    "@vitejs/plugin-vue": "^1.9.3",
+    "@ektx/vipress": "^0.15.0",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/compiler-sfc": "^3.2.37",
     "inquirer": "^7.3.3",
     "less": "^4.1.2",
