--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-# registry=https://registry.npmmirror.com/
-registry=http://localhost:4873/
+registry=https://registry.npmmirror.com/
+# registry=http://localhost:4873/
