--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ektx/vc2",
   "version": "1.16.6",
+  "type": "module",
   "files": [
     "lib",
     "types",
@@ -17,8 +18,14 @@
     "e2e": "./node_modules/.bin/cypress open",
     "dts": "vue-tsc --declaration --emitDeclarationOnly"
   },
-  "main": "lib/index.js",
-  "module": "lib/index.js",
+  "main": "lib/cjs/index.cjs",
+  "module": "lib/es/index.js",
+  "exports": {
+    ".": {
+      "import": "./lib/es/index.js",
+      "require": "./lib/cjs/index.cjs"
+    }
+  },
   "style": "lib/layout.css",
   "types": "types/index.d.ts",
   "author": "WenLong",
